# Aegisub

./: .gitignore  meson.build
.github/workflows/: ci.yml
src/: ass_file.h  dialog_style_editor.cpp  fold_controller.cpp  fold_controller.h  subs_edit_box.cpp  subs_edit_ctrl.cpp  subs_edit_ctrl.h  text_selection_controller.h  utils.cpp  utils.h  video_display.cpp  video_provider_bestsource.cpp  visual_tool.cpp  visual_tool.h  visual_tool_perspective.cpp  visual_tool_perspective.h  visual_tool_vector_clip.cpp
src/bitmaps/: manifest.respack
src/command/: edit.cpp  vis_tool.cpp
subprojects/: libvp2p.wrap
subprojects/packagefiles/bestsource/: meson.build
subprojects/packagefiles/libvp2p/: meson.build
tools/: win-installer-setup.ps1
